crates/vimci-mlt/src/snapshots/vimci_mlt__xml__tests__golden_media_clip_with_filters.snap
---
source: crates/vimci-mlt/src/xml.rs
expression: "to_xml(&Projection::of(&tl))"
---
<?xml version="1.0" encoding="utf-8"?>
<mlt LC_NUMERIC="C" version="7" producer="tractor0">
  <profile description="vimci" width="1920" height="1080" progressive="1" sample_aspect_num="1" sample_aspect_den="1" display_aspect_num="1920" display_aspect_den="1080" frame_rate_num="60" frame_rate_den="1" colorspace="709"/>
  <producer id="p0_0" in="30" out="129">
    <property name="mlt_service">avformat</property>
    <property name="resource">/media/0.mkv</property>
    <property name="vimci.clip">c3</property>
    <property name="vimci.label">m0</property>
    <filter>
      <property name="mlt_service">volume</property>
      <property name="level">-3.0000</property>
    </filter>
    <filter>
      <property name="mlt_service">brightness</property>
      <property name="alpha">0=0;4=1</property>
    </filter>
  </producer>
  <playlist id="playlist0" vimci.track="V1">
    <entry producer="p0_0" in="30" out="129"/>
  </playlist>
  <playlist id="playlist1" vimci.track="A1">
  </playlist>
  <tractor id="tractor0">
    <track producer="playlist0" hide="0"/>
    <track producer="playlist1" hide="1"/>
  </tractor>
</mlt>
